<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cam_stream</name>
  <version>0.0.0</version>
  <description>Package for multi-camera navigation using GStreamer pipelines and ROS2 compressed image transport</description>
  <maintainer email="tasc@todo.todo">tasc</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>                  <!-- ROS2 Python client library -->
  <depend>sensor_msgs</depend>            <!-- For CompressedImage message type -->
  <depend>cv_bridge</depend>              <!-- For image conversion utilities -->
  
  <!-- GStreamer dependencies -->
  <depend>python3-gi</depend>             <!-- Python GObject introspection -->
  <depend>gir1.2-gst-1.0</depend>        <!-- GStreamer 1.0 typelibs -->
  
  <!-- Image processing -->
  <depend>python3-opencv</depend>         <!-- OpenCV Python bindings -->
  <depend>python3-numpy</depend>          <!-- For buffer handling -->
  
  <!-- Optional (but recommended) -->
  <depend>image_transport</depend>        <!-- For advanced image transport options -->
  <depend>compressed_image_transport</depend> <!-- For compression plugins -->

  <!-- Development tools -->
  <exec_depend>gstreamer1.0-tools</exec_depend> <!-- GStreamer command line tools -->
  <exec_depend>gstreamer1.0-plugins-good</exec_depend> <!-- Additional plugins -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
